--- a/packages/ghost-graphql/package.json
+++ b/packages/ghost-graphql/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.1",
   "author": "Adam Henson <adamhenson1979@gmail.com> (https://github.com/adamhenson)",
   "description": "GraphQL data sources, query resolvers, schemas, and types for Ghost.",
+  "bugs": {
+    "url": "https://github.com/foo-software/ghost-graphql/issues"
+  },
+  "homepage": "https://github.com/foo-software/ghost-graphql/packages/ghost-graphql",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "keywords": [
