--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --single-quote --write"
+      "prettier --single-quote --write",
+      "node packages/ghost-graphql/dist/bin/generate-schema.js"
     ]
   },
   "devDependencies": {
