--- a/packages/ghost-graphql/package.json
+++ b/packages/ghost-graphql/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
+    "generate-schema": "node dist/bin/generate-schema.js",
     "prepare": "npm run clean && npm run build"
   },
   "peerDependencies": {
@@ -36,10 +37,12 @@
     "@types/camelcase-keys": "^5.1.1",
     "@types/graphql": "^14.5.0",
     "@types/graphql-type-json": "^0.3.2",
+    "@types/mkdirp": "^1.0.1",
     "@types/node": "^14.14.2",
     "apollo-server": "^2.18.2",
     "bunyan": "^1.8.14",
     "graphql": "^15.3.0",
+    "mkdirp": "^1.0.4",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
   }
