--- a/packages/ghost-graphql/package.json
+++ b/packages/ghost-graphql/package.json
@@ -2,7 +2,7 @@
   "name": "@foo-software/ghost-graphql",
   "version": "0.1.10",
   "author": "Adam Henson <adamhenson1979@gmail.com> (https://github.com/adamhenson)",
-  "description": "GraphQL data sources, query resolvers, schemas, and types for Ghost.",
+  "description": "Apollo GraphQL data sources, query resolvers, schemas, and types for Ghost",
   "bugs": {
     "url": "https://github.com/foo-software/ghost-graphql/issues"
   },
