--- a/packages/ghost-graphql-server/package.json
+++ b/packages/ghost-graphql-server/package.json
@@ -43,5 +43,6 @@
     "rimraf": "^3.0.2",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
-  }
+  },
+  "gitHead": "1ee75949d02cf86aae4ac30df85a37fe20dc6545"
 }
