--- a/packages/ghost-graphql/package.json
+++ b/packages/ghost-graphql/package.json
@@ -45,5 +45,6 @@
     "mkdirp": "^1.0.4",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
-  }
+  },
+  "gitHead": "1ee75949d02cf86aae4ac30df85a37fe20dc6545"
 }
