--- a/packages/ghost-graphql-ci-tools/package.json
+++ b/packages/ghost-graphql-ci-tools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@foo-software/ci-tools",
+  "name": "@foo-software/ghost-graphql-ci-tools",
   "version": "2.0.0",
   "author": "Adam Henson <adamhenson1979@gmail.com> (https://github.com/adamhenson)",
   "description": "CI helpers to aide in deploy, build, publish, release, etc. This package is not published.",
