--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     }
   },
   "scripts": {
-    "lerna": "lerna",
     "lint": "eslint ./packages/**/src --ext .ts,.tsx --cache --fix",
-    "prettier:all": "prettier --single-quote --write '*.{js,jsx,ts,tsx,json,css,scss,md}'"
+    "prettier:all": "prettier --single-quote --write '*.{js,jsx,ts,tsx,json,css,scss,md}'",
+    "postinstall": "npm run build --workspaces"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -37,7 +37,6 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^23.20.0",
     "husky": "^4.2.5",
-    "lerna": "^4.0.0",
     "lint-staged": "^10.4.2",
     "prettier": "^2.0.5"
   }
