--- a/packages/ghost-graphql-ci-tools/package.json
+++ b/packages/ghost-graphql-ci-tools/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
-    "prepare": "npm run clean && npm run build"
+    "prepublish": "npm run clean && npm run build"
   },
   "dependencies": {
     "shelljs": "^0.8.3"
@@ -17,6 +17,6 @@
   "devDependencies": {
     "@types/shelljs": "^0.8.8",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.3"
+    "typescript": "^5.7.2"
   }
 }
