--- a/packages/ghost-graphql-server/package.json
+++ b/packages/ghost-graphql-server/package.json
@@ -25,11 +25,11 @@
     "clean": "rimraf dist",
     "dev": "NODE_ENV=development ts-node-dev --respawn --inspect -- ./src/index.ts | bunyan --color",
     "ghost-graphql-server": "node dist/bin/ghost-graphql-server.js",
-    "prepare": "npm run clean && npm run build",
+    "prepublish": "npm run clean && npm run build",
     "start": "npm run build && node dist | bunyan --color"
   },
   "dependencies": {
-    "@foo-software/ghost-graphql": "^2.0.17",
+    "@foo-software/ghost-graphql": "*",
     "@types/meow": "^5.0.0",
     "apollo-server": "^2.18.2",
     "graphql": "^15.3.0",
@@ -42,7 +42,7 @@
     "bunyan": "^1.8.14",
     "rimraf": "^3.0.2",
     "ts-node-dev": "^1.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^5.7.2"
   },
   "gitHead": "97185e472875795719a0fb2a46eaad74ede71afd"
 }
