--- a/packages/ghost-graphql-server/tsconfig.json
+++ b/packages/ghost-graphql-server/tsconfig.json
@@ -14,6 +14,7 @@
     "noUnusedParameters": true,
     "outDir": "./dist",
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": true
