--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "scripts": {
     "lint": "eslint ./packages/**/src --ext .ts,.tsx --cache --fix",
-    "prettier:all": "prettier --single-quote --write '*.{js,jsx,ts,tsx,json,css,scss,md}'",
-    "postinstall": "npm run build --workspaces"
+    "prettier:all": "prettier --single-quote --write '*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": [
