--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,7 @@ jobs:
           scope: '@foo-software'
       - name: Install
         run: |
-          npm install --workspaces --include-workspace-root
-          npm run build --workspaces --if-present
+          npm install
       - name: Generate Schema
         run: |
           node packages/ghost-graphql-ci-tools/dist/bin/config-git.js
