--- a/packages/ghost-graphql/package.json
+++ b/packages/ghost-graphql/package.json
@@ -23,6 +23,7 @@
     "build": "tsc",
     "clean": "rimraf dist",
     "generate-schema": "node dist/bin/generate-schema.js",
+    "postinstall": "echo \"\"",
     "prepublish": "npm run clean && npm run build"
   },
   "peerDependencies": {
