--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "lint": "eslint ./packages/**/src --ext .ts,.tsx --cache --fix",
+    "postinstall": "echo \"\"",
     "prettier:all": "prettier --single-quote --write '*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "lint-staged": {
