feat: npm workspaces over lerna

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Install
         run: |
           npm install --workspaces
+          # build packages synchronously to ensure sibling dependencies are built.
+          # @TODO - see if it's possible to do this better
+          # first build the one that consumed by siblings, then just build all
+          npm run build --workspace="@foo-software/ghost-graphql"
           npm run build --workspaces --if-present
       - name: Generate Schema
         run: |
