--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install
         run: |
           npm install --workspaces
-          # ensure we build packages synchronously to ensure dependencies are built.
+          # build packages synchronously to ensure sibling dependencies are built.
           # @TODO - see if it's possible to do this better
           # first build the one that consumed by siblings, then just build all
           npm run build --workspace="@foo-software/ghost-graphql"
